--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="assets/images/FaviconCSS.png" type="image/x-icon">
   <link rel="stylesheet" href="assets/CSS/style.css">
+ 
   <title>Trilha de CSS - DIO</title>
 </head>
 <body>
